--- a/src/app/components/histogram/histogram.component.html
+++ b/src/app/components/histogram/histogram.component.html
@@ -1,1 +1,3 @@
-<p>histogram works!</p>
+<div class="col flex-center">
+<plotly-plot [data]="graph.data" [layout]="graph.layout" [useResizeHandler]="true"></plotly-plot>
+</div>
