status icon works

--- a/src/app/components/grid/grid.component.css
+++ b/src/app/components/grid/grid.component.css
@@ -26,4 +26,12 @@ table {
     background-color: teal;
 }
 
+.filter-btn {
+    background-color: rgb(44, 56, 126);
+}
+
+.filter-btn:hover {
+    background-color:peru;
+}
+
 
