--- a/src/app/components/grid/grid.component.html
+++ b/src/app/components/grid/grid.component.html
@@ -28,7 +28,7 @@
             <td>{{todo.keimeno}}</td>
             <td>{{todo.date_created}}</td>
             <td>{{todo.date_due}}</td>
-            <td><mat-icon [ngStyle]="{'color': todo.status == 'Working' && (ConvertToInt(todo.date_due) > today) ? working :  ConvertToInt(todo.date_due) < today && (todo.status =='Working' || todo.status =='New') ? overdue : two_days_after_today == ConvertToInt(todo.date_due) ? to_be_expired : grey}">circle</mat-icon></td>
+            <td><mat-icon [ngStyle]="{'color': todo.status == 'Working' && (ConvertToInt(todo.date_due) > today || ConvertToInt(todo.date_due) == today) ? working :  ConvertToInt(todo.date_due) < today && (todo.status =='Working' || todo.status =='New') ? overdue : two_days_after_today == ConvertToInt(todo.date_due) ? to_be_expired : grey}">circle</mat-icon></td>
         </tr>
        </perfect-scrollbar>
         </tbody>     
@@ -44,11 +44,16 @@
         mat-fab color="primary" (click)="edit()"><mat-icon>edit</mat-icon>
     </button>  
 
+    <button
+    style="float: right;"
+        class="mt-4 refresh-btn ml-4 mr-2" 
+        mat-fab color="primary" (click)="ngOnInit()"><mat-icon>refresh</mat-icon>
+    </button>  
 
     <button
     style="float: right;"
         class="mt-4 filter-btn ml-4 mr-2" 
-        mat-fab color="primary" (click)="StatusFilter()"><mat-icon>filter_alt</mat-icon>
+        mat-fab color="primary" (click)="ApplyFilters()"><mat-icon>filter_alt</mat-icon>
     </button>  
 <!--
         <mat-paginator [length]="length"
