toolbar width fixed

--- a/src/app/components/grid/grid.component.html
+++ b/src/app/components/grid/grid.component.html
@@ -20,7 +20,7 @@
         <div class="full-window">  
      
         <tbody *ngIf="!tableIsLoading">
-            <perfect-scrollbar class="todos-scrollbar" style="max-width: 600px; margin-left: 10px; overflow-x:hidden; position: relative; width: 100%; overflow-y: hidden; height:100vh">       
+            <perfect-scrollbar class="todos-scrollbar" style="max-width: 99%; margin-left: 10px; overflow-x:hidden; position: relative; width: 100%; overflow-y: hidden; height:100vh">       
          
                 
    
