--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -27,13 +27,13 @@
                    <div *ngIf="checked">
                       <mat-form-field class="mr-3 mat-form-field-width">
                            <mat-label>Month</mat-label>
-                           <mat-select [(value)]="selectedMonthOption" (click)="updateMonthObservableWithValueSelected()"> <!--2-way data binding with the value that the user each time selects-->
-                               <mat-option *ngFor="let option of months" value="option">{{option}}</mat-option>
+                           <mat-select [(value)]="selectedMonthOption"> <!--2-way data binding with the value that the user each time selects-->
+                               <mat-option *ngFor="let option of months" (click)="updateMonthObservableWithValueSelected(option)" value="option">{{option}}</mat-option>
                                </mat-select>
                            </mat-form-field>
                            <mat-form-field class="mr-3 mat-form-field-width">
                                <mat-label>Year</mat-label>
-                               <input [(ngModel)]="year" matInput placeholder="Enter year..." (click)="updateYearObservableWithValueSelected()">
+                               <input [(ngModel)]="year" matInput placeholder="Enter year..." (change)="updateYearObservableWithValueSelected()">
                            </mat-form-field>
                            <mat-form-field class="mr-3 mat-form-field-width">
                                <mat-label>Status</mat-label>
@@ -43,7 +43,7 @@
                            </mat-form-field>
                            <mat-form-field class="ml-3 search-width">
                                <mat-label>Search</mat-label>
-                               <input [(ngModel)]="keimeno" matInput #message maxlength="256" placeholder="Search by keywords..." (click)="updateKeimenoObservableWithValueSelected()">
+                               <input [(ngModel)]="keimeno" matInput #message maxlength="256" placeholder="Search by keywords..." (change)="updateKeimenoObservableWithValueSelected()">
                                <mat-hint align="end">{{message.value.length}} / 256</mat-hint>
                            </mat-form-field>       
                     </div>
