indicator circle for status updated

--- a/src/app/components/grid/grid.component.html
+++ b/src/app/components/grid/grid.component.html
@@ -30,7 +30,7 @@
             <td>{{todo.keimeno}}</td>
             <td>{{todo.date_created}}</td>
             <td>{{todo.date_due}}</td>
-            <td><mat-icon data-toggle="tooltip" data-placement="top" title="{{todo.status}}" [ngStyle]="{'color': todo.status == 'Working' && (ConvertToInt(todo.date_due) > today || ConvertToInt(todo.date_due) == today) ? working :  ConvertToInt(todo.date_due) < today && (todo.status =='Working' || todo.status =='New') ? overdue : two_days_after_today == ConvertToInt(todo.date_due) ? to_be_expired : grey}">circle</mat-icon></td>
+            <td><mat-icon data-toggle="tooltip" data-placement="top" title="{{todo.status}}" [ngStyle]="{'color': todo.status == 'Working' && (ConvertToInt(todo.date_due) > today || ConvertToInt(todo.date_due) == today) && (two_days_after_today !== ConvertToInt(todo.date_due)) ? working :  ConvertToInt(todo.date_due) < today && (todo.status =='Working' || todo.status =='New') ? overdue : two_days_after_today == ConvertToInt(todo.date_due) ? to_be_expired : grey}">circle</mat-icon></td>
         </tr>
        </perfect-scrollbar>
         </tbody>   
